--- a/languages/max-user-zh_CN.po
+++ b/languages/max-user-zh_CN.po
@@ -140,6 +140,7 @@ msgid "Email"
 msgstr "电子邮件"
 
 #: 
+#, fuzzy
 msgid "You have successfully registered to <strong>%s</strong>. We have emailed your password to the email address you entered."
 msgstr "您已成功注册<strong>％s </ strong>。我们已将您的密码通过电子邮件发送到您输入的电子邮件地"
 
@@ -299,4 +300,28 @@ msgstr "备注"
 #: 
 msgid "Please Select"
 msgstr "请选择"
+
+#: 
+msgid "Forgot your password?"
+msgstr "忘记密码了?"
+
+#: 
+msgid "Enter your email address and we'll send you a link you can use to pick a new password."
+msgstr "输入您的邮箱，我们将向您发送重制密码的邮件。"
+
+#: 
+msgid "Company Name Chinese"
+msgstr "公司名称（中文）"
+
+#: 
+msgid "Company Name English"
+msgstr "公司名称（英文）"
+
+#: 
+msgid "Company Email"
+msgstr "公司邮件"
+
+#: 
+msgid "Contact Email"
+msgstr "联系人邮件"
 
