--- a/languages/max-user-en_AU.po
+++ b/languages/max-user-en_AU.po
@@ -357,3 +357,7 @@ msgstr "Thanks for your support."
 msgid "CCCA team"
 msgstr "CCCA Team"
 
+#: 
+msgid "CCCA member account Password Reset"
+msgstr "CCCA member account Password Reset"
+
