--- a/languages/max-user-zh_CN.po
+++ b/languages/max-user-zh_CN.po
@@ -357,3 +357,7 @@ msgstr "感谢您的支持。"
 msgid "CCCA team"
 msgstr "总商会办公室"
 
+#: 
+msgid "CCCA member account Password Reset"
+msgstr "澳大利亚中国总商会会员账户密码重置"
+
