--- a/languages/max-user-en_AU.po
+++ b/languages/max-user-en_AU.po
@@ -361,3 +361,23 @@ msgstr "CCCA Team"
 msgid "CCCA member account Password Reset"
 msgstr "CCCA member account Password Reset"
 
+#: 
+msgid "test_branch"
+msgstr "NA"
+
+#: 
+msgid "Company Phone"
+msgstr "Company Phone"
+
+#: 
+msgid "Second Email"
+msgstr "Second Email"
+
+#: 
+msgid "Third Email"
+msgstr "Third Email"
+
+#: 
+msgid "Forth Email"
+msgstr "Forth Email"
+
